fix (ribbon): Ribbon is linking to beta page on small screens #196
Refix for https://github.com/eXistSolutions/hsg-shell/issues/196

--- a/app/scss/_customized-bootstrap.scss
+++ b/app/scss/_customized-bootstrap.scss
@@ -248,7 +248,7 @@ dd {
 .btn {
   font-family: $font-sans;
   @extend .btn-block;
-  @media (min-width: $xs-screen) {
+  @media (min-width: $xs-screen-min) {
     width: auto;
     display: inline-block;
   }
