--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -87,7 +87,8 @@ $color-focus:                #3e94cf;
 $color-visited:              #4c2c92;
 
 // Mobile First Breakpoints
-$xs-screen:         481px;
+$xs-screen:         480px;
+$xs-screen-min:     481px;
 $small-screen:      601px;
 $sm-screen:         841px;
 $medium-screen:     961px;
